Always ask permission before removing a file/folder #227
Fixes #227

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(vfrnav_common
       src/LaunchMode.cpp
+      src/FindMSFS.cpp
 )
 
 target_include_directories(vfrnav_common PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
