Use Save dialog instead of download one #233
Fixes #233

--- a/vfrnav_efb/app/package.json
+++ b/vfrnav_efb/app/package.json
@@ -37,6 +37,7 @@
   ],
   "devDependencies": {
     "@types/chart.js": "2.9.41",
+    "@types/wicg-file-system-access": "^2023.10.6",
     "jiti": "2.4.2"
   }
 }
