--- a/vfrnav_efb/package.json
+++ b/vfrnav_efb/package.json
@@ -8,41 +8,41 @@
   "devDependencies": {
     "@alx-home/pdfjs-dist-types": "2.10.377",
     "@csstools/postcss-cascade-layers": "5.0.2",
-    "@eslint/compat": "1.3.1",
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.31.0",
-    "@rollup/plugin-babel": "6.0.4",
-    "@types/node": "24.0.13",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "@typescript-eslint/eslint-plugin": "8.36.0",
-    "@typescript-eslint/parser": "8.36.0",
-    "@vitejs/plugin-legacy": "7.0.0",
-    "@vitejs/plugin-react": "4.6.0",
-    "autoprefixer": "10.4.21",
-    "cross-env": "7.0.3",
-    "dotenv": "17.2.0",
-    "dotenv-cli": "8.0.0",
-    "eslint": "9.31.0",
-    "eslint-config-prettier": "10.1.5",
+    "@eslint/compat": "2.0.1",
+    "@eslint/eslintrc": "3.3.3",
+    "@eslint/js": "9.39.2",
+    "@rollup/plugin-babel": "6.1.0",
+    "@types/node": "25.0.6",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "8.52.0",
+    "@typescript-eslint/parser": "8.52.0",
+    "@vitejs/plugin-legacy": "7.2.1",
+    "@vitejs/plugin-react": "5.1.2",
+    "autoprefixer": "10.4.23",
+    "cross-env": "10.1.0",
+    "dotenv": "17.2.3",
+    "dotenv-cli": "11.0.0",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.20",
-    "globals": "16.3.0",
-    "jiti": "2.4.2",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-react-refresh": "0.4.26",
+    "globals": "17.0.0",
+    "jiti": "2.6.1",
     "npm-watch": "0.13.0",
     "postcss": "8.5.6",
     "rollup-plugin-external-globals": "0.13.0",
-    "sass": "1.89.2",
+    "sass": "1.97.2",
     "tailwindcss": "^3.4.17",
-    "terser": "5.43.1",
-    "tsx": "4.20.3",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.36.0",
-    "vite": "7.0.4",
+    "terser": "5.44.1",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.52.0",
+    "vite": "^7.3.1",
     "vite-plugin-css-injected-by-js": "3.5.2",
     "vite-plugin-dts": "4.5.4",
     "vite-plugin-eslint": "1.8.1",
@@ -52,5 +52,8 @@
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
-  ]
+  ],
+  "dependencies": {
+    "react-use-event-hook": "^0.9.6"
+  }
 }
