--- a/vfrnav_efb/app/package.json
+++ b/vfrnav_efb/app/package.json
@@ -29,6 +29,7 @@
     "react": "19.1.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "19.1.0",
+    "react-use-event-hook": "^0.9.6",
     "resize-observer-polyfill": "1.5.1"
   },
   "browserslist": [
